# Basic-Discord-Private-Bot-Template

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: admin.py  bot_owner.py  commands.py  events.py  help.py  mics.py
core/: bot.py  constants.py  converter.py  error.py  events.py  help.py  pawgenator.py  views.py
utils/: checks.py  json.py  keep_alive.py  logging.py  moduls.py  mongo.py  types.py  util.py
